test/MC/SVE/regression-tests/negative_tests/sve-ldnt1h-000.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU16CLoadNT2LSSZ
// Restricted predicate has range [0, 7].
ldnt1h z30.h, p8/z, [x2, x20, lsl #1]
// CHECK: error: invalid operand
